[project]
name = "dsasolver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=3.4.3",
    "autogen-agentchat>=0.7.1",
    "autogen-core>=0.7.1",
    "autogen-ext[docker]>=0.7.1",
    "ollama>=0.5.1",
    "tiktoken>=0.9.0",
]
